<resources>

    <string name="app_name">MarshMallow</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_logout">Logout</string>

    <string name="title_activity_maps">Map</string>


    <string name="title_activity_create_post">CreatePost</string>
    <string name="CreatePostButton">Create Post</string>
    <string name="PostTitleText">Enter Post Title</string>
    <string name="PostDescriptionText">Enter Post Description</string>
    <string name="title_activity_view_post">ViewPostActivity</string>

    <string name="profile_welcome">My Profile</string>

    <string name="Review_Text">Review text here</string>
    <string name="Submit_Text">Submit</string>
    <string name="text_view_available_jobs">Available Jobs</string>
    <string name="button_view_jobs">View Available Jobs</string>
    <string name="text_view_job_details_title">Job Details</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="create_post">Create post</string>
    <string name="button_bid_on_job">Bid Now</string>
    <string name="review_Text_Overlay">Enter Review Here...</string>

    ------------------------------------------------------------------------------------------------
    All Of This is for settings DO NOT TAMPER WITH!
    ------------------------------------------------------------------------------------------------
    <string name="action_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">"Marshmallow Service, Empowering You to deliver."</string>
    <string name="app_version">1.0.8</string>
    <string name="summary_support">This is PAIN TODO!!!</string>
    <string name="title_send_feedback">Send Feedback</string>

    ---- FAQ HEADING ----
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    ---------------------

    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="title_version">Version</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <string name="review_Note">Please leave a review</string>

    <string name="textview_view_active_jobs_with_bids">My Open Jobs</string>
    <string name="textview_view_active_jobs_no_bids">Awaiting Bidders</string>
    <string name="text_nav_my_jobs">My Jobs</string>
    <string name="text_view_jobs_with_bids">Jobs With Bids</string>
    <string name="textview_bid_details_title">Bid Details</string>
    <string name="button_accept_bid">Accept Bid</string>
    <string name="button_post_history">Job History</string>
    <string name="button_bid_history">Bid History</string>
    <string name="textview_JobHistoryTitle">Job History</string>
    <string name="textview_MyBidsHistory">Bid History</string>
    <string name="button_job_completed">Mark As Complete</string>
    <string name="button_pickup_location">Select Pickup</string>
    <string name="button_dropoff_location">Select Dropoff</string>


</resources>
