<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@mipmap/ic_home_black_24dp"
        android:title="Home" />
    <item
        android:id="@+id/nav_create_post"
        android:title="@string/CreatePostButton" />
    <item
        android:id="@+id/nav_view_jobs"
        android:title="@string/button_view_jobs" />

    <item
        android:id="@+id/nav_my_jobs"
        android:title="@string/text_nav_my_jobs" />
    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@mipmap/ic_account_box_black_24dp"
                android:title="Account" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="Settings" />
            <item
                android:id="@+id/nav_Logout"
                android:icon="@mipmap/ic_exit_to_app_black_24dp"
                android:title="Logout" />
        </menu>
    </item>
</menu>